[package]
name = "holons"
version = "0.1.0"
edition = "2021"
description = "Organic Programming SDK for Rust"
license = "MIT"
authors = ["B. ALTER"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
